fixing overflow text in aboutme div

--- a/style/page.css
+++ b/style/page.css
@@ -63,15 +63,9 @@ img {
 #profilepic{
 	height:70%;
 }
-@media only screen and (max-width: 600px) {
-    #aboutme {
-    	visibility: hidden;
-    }
-}
 
 #aboutme {
 	vertical-align: top;
-	height:100%;
 	width:70%;
 }
 #technology {
